--- a/trunk/MakeFiles/OSX/Makefile
+++ b/trunk/MakeFiles/OSX/Makefile
@@ -1,4 +1,6 @@
 # $Id$
+# This makefile should be used with GNU make program
+
 CC	= c++
 CFLAGS	= -Wall -fno-rtti -I../../hpp -I../../src -O3
 CDEFS	= -DUNIX -D__OSX__ -D_AIX_CONV
@@ -12,8 +14,8 @@ SRCDIR	= ../../src/
 #ENABLE_SYSLOG_LOG_FORMAT=1
 
 ifeq ($(ENABLE_SCRIPTS), 1)
-    CFLAGS += `perl -e 'print "-D__PERL_NEW__" if ($$]>=5.008);'` `perl -MExtUtils::Embed -e ccopts`
-    LFLAGS += `perl -MExtUtils::Embed -e ldopts`    
+    CFLAGS += `perl -e '@v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1]";'` `perl -MExtUtils::Embed -e ccopts`
+    LFLAGS += `perl -MExtUtils::Embed -e ldopts`
 else
     CDEFS  += -D__NOSCRIPTS__
 endif
