--- a/trunk/MakeFiles/linux/Makefile
+++ b/trunk/MakeFiles/linux/Makefile
@@ -8,14 +8,14 @@ LFLAGS	= -s -L$(SRCDIR)smapi -lsmapilnx
 SRCDIR	= ../../src/
 #CONFIG	= /etc/ftn/rntrack.cfg
 
-# set to 1 for enable (in command line)
+# set to 1 for enable (in command line: make ENABLE_SCRIPTS=1 ENABLE_LOG_PID=1 ENABLE_SYSLOG_LOG_FORMAT=1)
 ENABLE_SCRIPTS?=1
 ENABLE_LOG_PID?=1
 ENABLE_SYSLOG_LOG_FORMAT?=1
 
 ifeq ($(ENABLE_SCRIPTS), 1)
-    CFLAGS += `perl -e 'print "-D__PERL_NEW__" if ($$]>=5.008);'` `perl -MExtUtils::Embed -e ccopts`
-    LFLAGS += `perl -MExtUtils::Embed -e ldopts`    
+    CFLAGS += `perl -e '@v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1]";'` `perl -MExtUtils::Embed -e ccopts`
+    LFLAGS += `perl -MExtUtils::Embed -e ldopts`
 else
     CDEFS  += -D__NOSCRIPTS__
 endif
