--- a/MakeFiles/FreeBSD/Makefile
+++ b/MakeFiles/FreeBSD/Makefile
@@ -1,8 +1,12 @@
 # $Id$
 CC	= g++
 CFLAGS	= -Wall -W -fno-rtti -I../../hpp -I../../src -O3
-CDEFS	= -DUNIX -DHAVE_UNISTD_H -DHAVE_FCNTL_H -DHAVE_LOCALE_H \
-          -DHAVE_STRING_H -DHAVE_TIME_H -DHAVE_SYS_TIME_H -DHAVE_UTIME_H \
+CDEFS	= -DUNIX -DHAVE_STDIO_H -DHAVE_STDLIB_H -DHAVE_STRING_H -DHAVE_CTYPE_H -DHAVE_SYS_TYPES_H \
+          -DHAVE_SYS_STAT_H -DHAVE_UNISTD_H -DHAVE_FCNTL_H -DHAVE_ERRNO_H -DHAVE_IOSTREAM_H \
+          -DHAVE_TIME_H -DHAVE_STDARG_H -DHAVE_ASSERT_H -DHAVE_DIRECT_H -DHAVE_DIRENT_H \
+          -DHAVE_SYS_TIME_H -DHAVE_LOCALE_H -DHAVE_UTIME_H -DHAVE_SIGNAL_H -DHAVE_LIMITS_H \
+          -DHAVE_SYS_NLS_H
+
 LFLAGS	= -s -L${SRCDIR}smapi -lsmapibsd
 SRCDIR	= ../../src/
 
