--- a/MakeFiles/cygwin/Makefile
+++ b/MakeFiles/cygwin/Makefile
@@ -1,7 +1,13 @@
 # $Id$
 CC	= g++
 CFLAGS	=  -mno-cygwin -Wall -W -fno-rtti -fno-strict-aliasing -I../../hpp -I../../src -O1
-CDEFS	= -D__NT__ -DNDEBUG -DWIN32 -DWIN32IOP_H
+CDEFS	= -D__NT__ -DNDEBUG -DWIN32 -DWIN32IOP_H \
+	 -DHAVE_STDIO_H -DHAVE_STDLIB_H -DHAVE_STRING_H  -DHAVE_STRINGS_H \
+	 -DHAVE_CTYPE_H -DHAVE_SYS_TYPES_H -DHAVE_SYS_STAT_H -DHAVE_UNISTD_H \
+	 -DHAVE_FCNTL_H -DHAVE_ERRNO_H -DHAVE_IOSTREAM_H \
+          -DHAVE_TIME_H -DHAVE_STDARG_H -DHAVE_ASSERT_H -DHAVE_DIRECT_H -DHAVE_DIRENT_H \
+          -DHAVE_SYS_TIME_H -DHAVE_LOCALE_H -DHAVE_UTIME_H -DHAVE_LIMITS_H
+
 LFLAGS	= -s -mno-cygwin -L$(SRCDIR)smapi -lsmapicyg -lmingwex
 SRCDIR	= ../../src/
 EXEEND= _w32.exe
