--- a/trunk/MakeFiles/linux/Makefile
+++ b/trunk/MakeFiles/linux/Makefile
@@ -25,8 +25,9 @@ ENABLE_LOG_PID?=0
 ENABLE_SYSLOG_LOG_FORMAT?=0
 
 ifeq ($(ENABLE_SCRIPTS), 1)
-    CFLAGS += `perl -e '@v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1]";'` `perl -MExtUtils::Embed -e ccopts`
-    LFLAGS += `perl -MExtUtils::Embed -e ldopts`
+    CFLAGS += $(shell perl -e '@v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1]";')
+    CFLAGS += $(shell perl -MExtUtils::Embed -e ccopts)
+    LFLAGS += $(shell perl -MExtUtils::Embed -e ldopts)
 endif
 
 ifeq ($(ENABLE_SYSLOG_LOG_FORMAT), 1)
