--- a/MakeFiles/linux/Makefile
+++ b/MakeFiles/linux/Makefile
@@ -25,7 +25,8 @@ ENABLE_LOG_PID?=0
 ENABLE_SYSLOG_LOG_FORMAT?=0
 
 ifeq ($(ENABLE_SCRIPTS), 1)
-    CFLAGS += $(shell perl -MConfig -e 'my @v=split(/\./,"$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$v[0] -D__PERL_MINOR__=$v[1] $Config{ccdlflags} $Config{ccflags} -I$Config{archlibexp}/CORE"')
+#    CFLAGS += $(shell perl -MConfig -e 'my @v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1] $$Config{ccdlflags} ", join(" ",grep(!/(^$|-fstack-protector|-fno-strict-aliasing)/,split(" ",$$Config{ccflags}))), " -I$$Config{archlibexp}/CORE"')
+    CFLAGS += $(shell perl -MConfig -e 'my @v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1] $$Config{ccdlflags} ", join(" ",grep(!/(^$|-fno-strict-aliasing)/,split(" ",$$Config{ccflags}))), " -I$$Config{archlibexp}/CORE"')
     LFLAGS += $(shell perl -e 'use ExtUtils::Embed; print join(" ",grep(!/DynaLoader/,split(" ",ldopts(0))));')
 endif
 
