--- a/MakeFiles/emx/Makefile.emx
+++ b/MakeFiles/emx/Makefile.emx
@@ -10,10 +10,10 @@ CC=	gcc
 PERL=D:/PERLLIB/LIB/5.00553/os2
 
 CFLAGS=	-Wall -fno-rtti -s -g
-CDEFS=	-DOS2 -DEMX -DDO_PERL -DDOSISH -DEMBED -DHAVE_UNISTD_H -DHAVE_IO_H
-COPT=	-I../../hpp -I../../.. -I$(PERL)/CORE -O3
+CDEFS=	-DOS2 -DEMX -DDO_PERL -DDOSISH -DEMBED -DHAVE_UNISTD_H -DHAVE_IO_H -DHAS_strupr -DHAVE_LOCALE_H -DHAVE_TIME_H -DHAVE_UTIME_H
+COPT=	-I../../hpp -I../../.. -I$(SRCDIR) -I$(PERL)/CORE -O3
 SRCDIR= ../../src/
-LFLAGS=	-Zcrtdll -L../../../smapi -g
+LFLAGS=	-Zcrtdll -L../../src/smapi -lsmapiemx -g
 EXEEND= _os2.exe
 
 ALL: rntrack$(EXEEND)
@@ -74,7 +74,7 @@ PERLLIBS=\
 
 
 rntrack$(EXEEND): $(OBJS)
-	$(CC) $(LFLAGS) -o rntrack$(EXEEND) $(OBJS) -lsmapiemx  $(PERLLIBS)
+	$(CC) $(LFLAGS) -o rntrack$(EXEEND) $(OBJS) $(PERLLIBS)
 
 clean:
 	-del *.o
