--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -20,7 +20,7 @@ AC_PROG_CC
 AC_PROG_MAKE_SET
 AC_PROG_RANLIB
 #AM_PROG_LIBTOOL
-AM_PROG_INSTALL
+AC_PROG_INSTALL
 AC_CHECK_PROG(PERL,perl,perl)
 
 # Checks for header files.
